--- a/app/details-game/details-game.component.html
+++ b/app/details-game/details-game.component.html
@@ -5,5 +5,5 @@
     <div>Platform: {{game.platform}}</div>
     <div>Comment: {{game.comment}}</div>
     <div>Note: {{game.note}}</div>    
-    <div>Add to {{user.username}}</div>
+    <div>Add to {{game.username}}</div>
 </div>
