--- a/app/my-nav/my-nav.component.html
+++ b/app/my-nav/my-nav.component.html
@@ -22,7 +22,8 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>OVGL{{username}}</span>
+      <span>OVGL</span>
+      {{username}}
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
